--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <meta
       name="description"
-      content="Kirill is an entry-level web design specialist and web developer with a solid foundation in HTML, CSS and Adobe Softwares. Kirill bring your idea to life with innovative and responsive web design."
+      content="Kirill is an entry-level web design specialist and web developer with a solid foundation in HTML, CSS, JavaScript and Adobe Creative Cloud. Kirill bring your idea to life with innovative and responsive web design."
     />
     <meta name="color-scheme" content="dark light" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -155,7 +155,8 @@
             <p class="text--xl">
               Kirill is an entry-level web design specialist and web developer
               with a solid foundation in <strong>HTML</strong>,
-              <strong>CSS</strong> and <strong>Adobe Softwares</strong>.
+              <strong>CSS</strong>, <strong>JavaScript</strong> and
+              <strong>Adobe Creative Cloud</strong>.
             </p>
             <p class="text--xl">
               Kirill bring your idea to life with
@@ -192,17 +193,17 @@
             <div>
               <p class="text--lg">
                 Enthusiastic, well-organized, and responsible entry-level web
-                designer specialist with a strong foundation in HTML5, CSS3,
-                Adobe softwares and foundations in the gaming industry is ready
-                to embark on a career in the iGaming industry. Kirill possesses
-                good communication skills and has a good sense of timeframes.
+                designer and web developer specialist with a strong foundation
+                in HTML5, CSS3, JavaScript and Adobe Creative Cloud Softwares is
+                ready to embark on a career as a entry-level specialist. Kirill
+                possesses good communication skills and has a good sense of
+                timeframes.
               </p>
             </div>
             <div>
               <p class="text--lg">
                 Kirill's commitment to creating visually stunning and intuitive
-                web and graphic designs aligns perfectly with the needs of
-                online gaming platforms.
+                web and graphic designs aligns perfectly with the company needs.
               </p>
               <p class="text--lg">
                 Friendly, motivated, and qualified specialist in the field of
@@ -239,11 +240,10 @@
               class="projects-screenshot"
             />
             <div>
-              <h3 class="title">Gambling Web Banners</h3>
+              <h3 class="title">Web Banners</h3>
               <p class="text">
-                Because Kirill is so passionate about creating graphic web
-                banners, he has provided some of his designs related to gaming
-                industry.
+                Kirill is very passionate about creating graphic banners, so he
+                kindly shared his designs.
               </p>
               <a
                 href="https://drive.proton.me/urls/ZRXVBQX4NG#KXyNqQsQRZcI"
@@ -265,7 +265,7 @@
             <div>
               <h3 class="title">HTML5 CSS3 JavaScript</h3>
               <p class="text">
-                Kirill studying programming languages for application and web
+                Kirill studying programming languages for applications and web
                 development, he kindly shares his work with people to
                 demonstrate his skills.
               </p>
@@ -308,6 +308,8 @@
             <li class="tag">Digital Marketing</li>
             <li class="tag">SMM</li>
             <li class="tag">Meta</li>
+            <li class="tag">E-mail Marketing</li>
+            <li class="tag">Copywriting</li>
           </ul>
         </div>
       </section>
