--- a/index.html
+++ b/index.html
@@ -405,6 +405,32 @@
                 </ul>
               </ul>
             </figure>
+            <figure class="layout-certificates layout-section-title">
+              <img
+                src="assets/certificates/Programming_Basics_Kirill_S copy.jpg"
+                width="70%"
+                height="auto"
+                alt="Certificate of completion of the Programming Basics JavaScript 2023 course, issued to Kirill Strunkov."
+              />
+              <figcaption class="text--xl">
+                JavaScript Programming Basics
+              </figcaption>
+              <ul style="padding-left: 0" class="text--lg">
+                Learning objectives:
+                <ul class="tags" style="text-align: start">
+                  <li class="tag">Variables</li>
+                  <li class="tag">Numbers</li>
+                  <li class="tag">Strings</li>
+                  <li class="tag">Booleans</li>
+                  <li class="tag">Arrays</li>
+                  <li class="tag">Objects</li>
+                  <li class="tag">Functions</li>
+                  <li class="tag">Conditionals</li>
+                  <li class="tag">Classes</li>
+                  <li class="tag">Inheritance</li>
+                </ul>
+              </ul>
+            </figure>
           </div>
         </div>
       </section>
